# Agent_Coding_Tool

./: .clang-format  .clang-tidy  .gitignore  ACT-PRD-产品需求文档.md  ACT-开发计划与进度.md  ACT-技术选型报告.md  ACT-术语表.md  ACT-系统架构设计.md  ACT-风险矩阵.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  _bootstrap_vcpkg.bat  _build.bat  agent-self-iteration-system.md  vcpkg.json
.claude/rules/: build-rules.md  code-quality.md
.github/agents/: act-continuation.agent.md
.github/workflows/: ci.yml  release.yml
app/cli/: CMakeLists.txt  main.cpp  tui_app.cpp  tui_app.h
docs/: act-evaluation-stack.md  claude-code-tools.md  claude_systemPromot.md  flow.html  langfuse-usage-guide.md  task-queue.md
src/: CMakeLists.txt
src/core/: enums.h  error_codes.h  runtime_event.cpp  runtime_event.h  runtime_version.cpp  runtime_version.h  types.h
src/framework/: CMakeLists.txt  agent_loop.cpp  agent_loop.h  agent_scheduler.cpp  agent_scheduler.h  channel.cpp  channel.h  cli_repl.cpp  cli_repl.h  command_registry.cpp  command_registry.h  config_panel.cpp  config_panel.h  eval_runner.cpp  eval_runner.h  execution_lane.cpp  execution_lane.h  feishu_channel.cpp  feishu_channel.h  framework.cpp  input_dispatcher.cpp  input_dispatcher.h  interactive_session_controller.cpp  interactive_session_controller.h  interactive_session_state.cpp  interactive_session_state.h  markdown_formatter.cpp  markdown_formatter.h  parallel_subagent.cpp  parallel_subagent.h  patch_transaction.cpp  patch_transaction.h  plugin_system.cpp  plugin_system.h  plugin_types.h  raw_terminal.cpp  raw_terminal.h  resume_manager.cpp  resume_manager.h  runtime_event_logger.cpp  (+21 more)
src/framework/commands/: commit_pr_command.cpp  commit_pr_command.h  copy_command.cpp  copy_command.h  diff_command.cpp  diff_command.h  doctor_command.cpp  doctor_command.h  review_command.cpp  review_command.h
src/harness/: CMakeLists.txt  context_manager.cpp  context_manager.h  cost_tracker.cpp  cost_tracker.h  cron_manager.cpp  cron_manager.h  file_checkpoint.cpp  file_checkpoint.h  harness.cpp  hook_manager.cpp  hook_manager.h  hook_types.h  interfaces.h  mcp_tool_adapter.cpp  mcp_tool_adapter.h  memory_manager.cpp  memory_manager.h  permission_manager.cpp  permission_manager.h  task_manager.cpp  task_manager.h  tool_registry.cpp  tool_registry.h
src/harness/tools/: ask_user_tool.cpp  ask_user_tool.h  ask_user_v2_tool.cpp  ask_user_v2_tool.h  brief_tool.cpp  brief_tool.h  build_tool.cpp  build_tool.h  diagnostic_tool.cpp  diagnostic_tool.h  diff_view_tool.cpp  diff_view_tool.h  directory_tool.cpp  directory_tool.h  enter_plan_mode_tool.cpp  enter_plan_mode_tool.h  enter_worktree_tool.cpp  enter_worktree_tool.h  exit_plan_mode_tool.cpp  exit_plan_mode_tool.h  exit_worktree_tool.cpp  exit_worktree_tool.h  file_delete_tool.cpp  file_delete_tool.h  file_edit_tool.cpp  file_edit_tool.h  file_read_tool.cpp  file_read_tool.h  file_write_tool.cpp  file_write_tool.h  git_branch_tool.cpp  git_branch_tool.h  git_commit_tool.cpp  git_commit_tool.h  git_diff_tool.cpp  git_diff_tool.h  git_log_tool.cpp  git_log_tool.h  git_status_tool.cpp  git_status_tool.h  (+30 more)
src/infrastructure/: CMakeLists.txt  feishu_protocol.cpp  feishu_protocol.h  feishu_rest_client.cpp  feishu_rest_client.h  feishu_ws_client.cpp  feishu_ws_client.h  http_network.cpp  http_network.h  infrastructure.cpp  interfaces.h  mcp_client.cpp  mcp_client.h  mcp_transport.cpp  mcp_transport.h  sse_parser.cpp  sse_parser.h
src/presentation/vscode-protocol/: CMakeLists.txt  vscode_protocol.cpp
src/services/: CMakeLists.txt  ai_engine.cpp  ai_engine.h  anthropic_converter.cpp  anthropic_converter.h  anthropic_provider.cpp  anthropic_provider.h  config_manager.cpp  config_manager.h  interfaces.h  llm_provider.h  openai_compat_converter.cpp  openai_compat_converter.h  openai_compat_provider.cpp  openai_compat_provider.h  responses_converter.cpp  responses_converter.h  responses_provider.cpp  responses_provider.h  services.cpp
tests/: CMakeLists.txt
tests/cli/: InteractiveSessionControllerTest.cpp  InteractiveSessionStateTest.cpp  test_main.cpp
tests/core/: CoreTypesTest.cpp  RuntimeVersionTest.cpp
tests/e2e/: PermissionFlowTest.cpp  ReplFeatureTest.cpp  ToolRegistrationTest.cpp
tests/framework/: AgentLoopTest.cpp  AgentSchedulerTest.cpp  CliReplTest.cpp  CommitPrCommandTest.cpp  CopyCommandTest.cpp  DiffCommandTest.cpp  DoctorCommandTest.cpp  EvalRunnerTest.cpp  ExecutionLaneTest.cpp  MarkdownFormatterTest.cpp  ParallelSubagentTest.cpp  PatchTransactionTest.cpp  PlanModeTest.cpp  PluginSystemTest.cpp  ResumeManagerTest.cpp  ReviewCommandTest.cpp  RuntimeTraceTest.cpp  SessionSerializerTest.cpp  SkillCatalogTest.cpp  SkillLoaderTest.cpp  SmokeTest.cpp  StreamFormatterTest.cpp  SubagentManagerTest.cpp  TaskGraphTest.cpp  TerminalStyleTest.cpp
tests/harness/: AskUserToolTest.cpp  AskUserV2ToolTest.cpp  BriefToolTest.cpp  BuildToolTest.cpp  ContextManagerTest.cpp  CostTrackerTest.cpp  CronManagerTest.cpp  DiagnosticToolTest.cpp  DiffViewToolTest.cpp  DirectoryToolTest.cpp  FileCheckpointTest.cpp  FileDeleteToolTest.cpp  GitBranchToolTest.cpp  GitCommitToolTest.cpp  GitLogToolTest.cpp  GitToolsTest.cpp  HookManagerTest.cpp  MemoryManagerTest.cpp  NotebookEditToolTest.cpp  PermissionPromptTest.cpp  ReadOnlyToolsTest.cpp  RepoMapToolTest.cpp  ShellSecurityTest.cpp  SmokeTest.cpp  SubagentToolTest.cpp  TaskCreateToolTest.cpp  TaskManagerTest.cpp  TestRunnerToolTest.cpp  TodoWriteToolTest.cpp  ToolInterfaceTest.cpp  ToolRegistryTest.cpp  WebFetchToolTest.cpp  WebSearchToolTest.cpp  WorktreeToolTest.cpp  WriteToolsTest.cpp  mock_file_system.h
tests/infrastructure/: HttpNetworkTest.cpp  InterfaceTest.cpp  McpClientTest.cpp  SmokeTest.cpp  SseParserTest.cpp
tests/integration/: EndToEndCliTest.cpp  LiveProviderTest.cpp  RegressionTest.cpp  SmokeTest.cpp
tests/services/: AIEngineTest.cpp  AnthropicConverterTest.cpp  ConfigManagerTest.cpp  FallbackChainTest.cpp  OpenAICompatConverterTest.cpp  ResponsesConverterTest.cpp  ServiceInterfaceTest.cpp  SmokeTest.cpp
tests/test_helpers/: MockAIEngine.h
(+23 files in other folders)
